--- a/вежбе/вежбе02.md
+++ b/вежбе/вежбе02.md
@@ -1,2 +1,196 @@
 # Основи програмирања: вежбе - II недеља
 
+## Задатак 1
+Напиши функцију који враћа збир цифара четвороцифреног броја.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def zbir_cifara_cetvorocifrenog_broja(x):
+    """
+    Напиши функцију који враћа збир цифара четвороцифреног броја.
+    """
+    cifra_jedinica = x % 10
+    cifra_desetica = (x//10) % 10
+    cifra_stotina = (x//100) % 10
+    cifra_hiljada = (x//1000) % 10
+
+    zbir = cifra_jedinica + cifra_desetica + cifra_stotina + cifra_hiljada
+
+    return zbir
+```
+
+</details>
+
+## Задатак 2
+Напиши функцију који исписује дужину дужи за унете кординате тачака.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+import math
+def duzina_duzi():
+    """
+    Напиши функцију који исписује дужину дужи за унете кординате тачака.
+    """
+    x1,y1,x2,y2 = map(int, input().split())
+    return math.sqrt( math.pow( x1-x2 , 2) + math.pow( y1-y2, 2))
+```
+
+</details>
+
+## Задатак 3
+Напиши функцију који враћа унети број, али са избаченом цифром стотина.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def izbaciti_cifru_stotina():
+    """
+    Напиши функцију који враћа унети број, али са избаченом цифром стотина.
+    """
+    n = int(input())
+    prefiks = n // 1000
+    sufiks = n % 100
+    return 100 * prefiks + sufiks
+    """
+    Друго решење
+    n = input()
+    return n[:-3] + n[-2:]
+    """
+```
+</details>
+
+## Задатак 4
+Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def obrni_cifre():
+    """
+    Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
+    """
+    n = int(input())
+
+    prefiks = n//10000
+    cifra_jedinica = n%10
+    cifra_desetica = (n//10)%10
+    cifra_stotina = (n//100)%10
+    cifra_hiljada = (n//1000)%10
+    
+    broj = prefiks * 10000 + cifra_jedinica*1000 + cifra_desetica*100 + cifra_stotina*10 + cifra_hiljada
+
+    print(broj)
+    """
+    Друго решење
+    n = input()
+    print(n[:-4] + n[:-5:-1])
+    """
+```
+</details>
+
+## Задатак 5
+Напиши функцију која за унете дужине страница троугла, проверава да и такав троугао постоји.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def trougao():
+    """
+    Напиши функцију која за унете дужине страница троугла, проверава да и такав троугао постоји.
+    """
+    a,b,c = map(float, input().split())
+
+    if a < b + c and b < a + c and c < a + b:
+        print("Trougao sa stranicama {}, {}, {} postoji".format(a,b,c))
+    else:
+        print('Trougao sa stranicama', str(a)+',', str(b)+',', str(c) ,' ne postoji')
+
+```
+</details>
+
+## Задатак 6
+Напиши функцију која за за унети број проверава дељивост са 2 и са 3.
+<details markdown='block'>
+<summary>Решење </summary>
+ 
+```python
+def deljivost(x):
+    """
+    Напиши функцију која за за унето x проверава дељивост са 2 и са 3.
+    """
+    if x % 2 == 0 and x % 3 == 0:
+        print("Broj {} je deljiv sa 2 i sa 3.".format(x))
+    elif x % 2 == 0:
+        print("Broj {} je deljiv samo sa 2.".format(x))
+    elif x % 3 == 0:
+        print("Broj {} je deljiv samo sa 3.".format(x))
+    else:
+        print("Broj {} nije deljiv ni sa 2 ni sa 3.".format(x))
+```
+</details>
+
+## Задатак 7
+Напиши програм која за унети целобројни број враћа збир његових цифара.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def zbir_cifara_celobrojnog_broja(n):
+    """
+    Напиши програм која за унети целобројни број враћа збир његових цифара.
+    """
+    n=abs(n)
+    s=0
+    while n>0:
+        s+=n%10
+        n=n//10
+
+    return s
+``` 
+</details>
+
+## Задатак 8
+Написати функцију који за унету ниску враћа ниску уназад.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def niska_unazad(niska):
+    """
+    Написати функцију који за унету ниску враћа ниску уназад.
+    """
+    return niska[::-1]
+    """
+    Друго решење
+    niz = []
+    for i in range(len(niska)-1,-1,-1):
+        niz.append(niska[i])
+
+    return ''.join(niz)
+    """
+ ```
+</details>
+
+ ## Задатак 9
+ Написати функцију која проверава да ли је унета ниска палиндром.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def palindrom(niska):
+    """
+    Написати функцију која проверава да ли је унета ниска палиндром.
+    """
+    return niska == niska[::-1]
+    """
+    Друго решење
+    unazad = niska_unazad(niska)
+    return niska == unazad
+    """
+```
+</details>
+ 
+
+
