Додати падајући блокови за решења

--- a/вежбе/вежбе02.md
+++ b/вежбе/вежбе02.md
@@ -42,7 +42,7 @@ def duzina_duzi():
 ## Задатак 3
 Напиши функцију који враћа унети број, али са избаченом цифром стотина.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење преко оператора </summary>
 
 ```python
 def izbaciti_cifru_stotina():
@@ -53,18 +53,26 @@ def izbaciti_cifru_stotina():
     prefiks = n // 1000
     sufiks = n % 100
     return 100 * prefiks + sufiks
+ 
+```
+</details>
+<details markdown='block'>
+<summary>Решење преко одсецања ниске </summary>
+
+```python
+def izbaciti_cifru_stotina():
     """
-    Друго решење
+    Напиши функцију који враћа унети број, али са избаченом цифром стотина.
     n = input()
     return n[:-3] + n[-2:]
-    """
+
 ```
 </details>
 
 ## Задатак 4
 Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење преко оператора </summary>
 
 ```python
 def obrni_cifre():
@@ -82,11 +90,20 @@ def obrni_cifre():
     broj = prefiks * 10000 + cifra_jedinica*1000 + cifra_desetica*100 + cifra_stotina*10 + cifra_hiljada
 
     print(broj)
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење преко одсецања ниске</summary>
+
+```python
+def obrni_cifre():
     """
-    Друго решење
+    Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
+    """
     n = input()
     print(n[:-4] + n[:-5:-1])
-    """
+
 ```
 </details>
 
@@ -154,7 +171,24 @@ def zbir_cifara_celobrojnog_broja(n):
 ## Задатак 8
 Написати функцију који за унету ниску враћа ниску уназад.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење преко for петље </summary>
+    
+```python
+def niska_unazad(niska):
+    """
+    Написати функцију који за унету ниску враћа ниску уназад.
+    """
+    niz = []
+    for i in range(len(niska)-1,-1,-1):
+        niz.append(niska[i])
+
+    return ''.join(niz)
+
+ ```
+</details>
+    
+<details markdown='block'>
+<summary>Решење одсецањем ниске </summary>
     
 ```python
 def niska_unazad(niska):
@@ -162,21 +196,26 @@ def niska_unazad(niska):
     Написати функцију који за унету ниску враћа ниску уназад.
     """
     return niska[::-1]
-    """
-    Друго решење
-    niz = []
-    for i in range(len(niska)-1,-1,-1):
-        niz.append(niska[i])
-
-    return ''.join(niz)
-    """
  ```
 </details>
-    
+
 ## Задатак 9
- Написати функцију која проверава да ли је унета ниска палиндром.
+Написати функцију која проверава да ли је унета ниска палиндром.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење позивањем преходне функције niska_unazad </summary>
+    
+```python
+def palindrom(niska):
+    """
+    Написати функцију која проверава да ли је унета ниска палиндром.
+    """
+    unazad = niska_unazad(niska)
+    return niska == unazad
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење одсецањем ниске</summary>
     
 ```python
 def palindrom(niska):
@@ -184,11 +223,6 @@ def palindrom(niska):
     Написати функцију која проверава да ли је унета ниска палиндром.
     """
     return niska == niska[::-1]
-    """
-    Друго решење
-    unazad = niska_unazad(niska)
-    return niska == unazad
-    """
 ```
 </details>
  
