--- a/вежбе/вежбе05.md
+++ b/вежбе/вежбе05.md
@@ -93,7 +93,7 @@ def armstrongov_broj():
 
 ## Задатак 4
 Написати функцију који одређује колико бројева у низу не садрже цифру 5.
-<details>
+<details markdown='block'>
 <summary>Решење </summary>
 
 ```python
@@ -114,7 +114,7 @@ def brojevi_koji_ne_sadrze_5(niz):
 
 ## Задатак 5
 Написати функцију која враћа максималну разлику суседних бројева у низу.
-<details>
+<details markdown='block'>
 <summary>Решење </summary>
 
 ```python
@@ -140,7 +140,7 @@ def maksimalna_razlika_susednih(niz):
 ## Задатак 6
 Написати функцију која враћа два броја у низу која у збиру дају циљану вредност.
 У случају да не постоје, вратити -1.
-<details>
+<details markdown='block'>
 <summary>Решење </summary>
 
 ```python
@@ -162,7 +162,7 @@ def zbir_dva(niz, cilj):
 
 ## Задатак 7
 Написати функцију која за уласку ниску враћа најкраћу и најдужу реч.
-<details>
+<details markdown='block'>
 <summary>Решење </summary>
 
 ```python
