--- a/вежбе/вежбе08.md
+++ b/вежбе/вежбе08.md
@@ -162,6 +162,8 @@ def kaprekarova_konstanta(broj):
         veci = int(''.join(sorted(broj, reverse=True)))
         manji = int(''.join(sorted(broj, reverse=False)))
         broj = veci - manji
+        
+    return brojac
 ```
 </details>
 
