--- a/колоквијуми/кол22.md
+++ b/колоквијуми/кол22.md
@@ -1,2 +1,130 @@
 # Основи програмирања: колоквијум 2022.
 
+
+## Задатак 1
+Малог Карла фасцинирају различите врсте бројева: парни, непарни, лепи, савршени, прости (мама му не да да те користи), троугласти... Размишљајући о свим тим бројевима, одлучио је да осмисли своје. Дуго је размишљао о томе како да их дефинише, док није видео огледало. Тада му је синула изврсна идеја: његови бројеви зваће се зрцални, а број ће бити зрцалан ако се може прочитати у огледалу тако да опет изгледа као неки број.
+
+Тако су на пример бројеви 0 и 8 зрцални, јер у огледалу изгледају исто. Остали једноцифрени бројеви нису зрцални. Број 8088 је такође зрцалан јер у огледалу изгледа као 8808. Број 80 пак није зрцалан, јер у огледалу изгледа као 08, а Карло зна да се бројеви пишу без водећих нула.
+
+Карло воли да размишља о томе је ли неки број зрцалан, али нема увек огледало са собом. Зато вас моли да му напишете програм који за број n исписује да ли је зрцалан.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+n = input()
+if n!='0' and (n[-1] == '0' or any(map(lambda x: x not in "08", n))):
+    print("NE")
+else:
+    print("DA")
+
+```
+
+</details>
+
+## Задатак 2
+Постоје три тајна природна броја, X, Y и Z, за које важи X <= Y <= Z. Како би вас збунили и отежали вам проналазак тајних бројева, дато вам је седам (не нужно различитих) бројева с тврдоњм да су то X, Y, Z, X + Y, Y + Z, Z + X, и X + Y + Z у неком редоследу.
+
+Међутим, постоји начин да се из ових седам датих бројева на јединствен начин одреде X, Y и Z.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+brojevi = list(sorted(map(int,input().split())))
+x,y = brojevi[0],brojevi[1]
+z = brojevi[-1]-x-y
+print(x,y,z)
+
+```
+
+</details>
+
+## Задатак 3
+За задати број, написати програм који избацује узастопне понављајуће цифре.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+broj = input()
+
+def ponavljajuceCifre(broj):
+
+	#Ukoliko je negativan, to pamtimo, i pretvaramo ga u pozitivan
+	if int(broj) < 0:
+		negativan = True
+	else:
+		negativan = False
+	broj = str(abs(int(broj)))
+
+	l = len(broj)
+	i, j = 0, 0
+	niska = '' 
+	while i < l:
+		niska += broj[i]
+		j += 1
+		 
+		while (i + 1 < l and broj[i] == broj[i + 1]):
+			i += 1
+		i += 1
+	
+	#Ukoliko je bio negativan, dodati - ispred
+	if negativan:
+		return '-' + niska
+	
+	return niska
+
+print(ponavljajuceCifre(broj))
+
+```
+
+</details>
+
+## Задатак 4
+За задати низ бројева, нови ниво је једнак збиру свака два узастопна члана на претходном нивоу.
+Написати функцију која ће вратити вредност која се добија на нивоу када се више не може рачунати тај збир.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+niz = list(map(int,input().split()))
+
+def trougaonizbir(niz):
+    if len(niz)==1:
+        return niz[0]
+
+    novi_niz = []
+    for i in range(len(niz)-1):
+        novi_niz.append(niz[i]+niz[i+1])
+
+    return trougaonizbir(novi_niz)
+
+print(trougaonizbir(niz))
+
+```
+
+</details>
+
+## Задатак 5
+Да ли сте се икада запитали на колико различитих начина у продавници можете добити кусур у висини одређеног износа користећи новчиће од 1, 2, 5, 10 и 20 динара?
+Написати програм коjи враћа исписује броj начина, а прима износ и апоене у виду природног броjа и низа позитивних броjева.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+iznos = int(input())
+apoeni = list(map(int,input().split()))
+
+def kusur(iznos, apoeni):
+	if iznos == 0:
+		return 1
+	if iznos < 0 or len(apoeni) == 0:
+		return 0
+	return kusur(iznos - apoeni[0], apoeni) + kusur(iznos, apoeni[1:])
+	
+	
+print(kusur(iznos,apoeni))
+
+
+
+```
+
+</details>
