Додат пример за Вежбе 10 задатак 4

--- a/вежбе/вежбе10.md
+++ b/вежбе/вежбе10.md
@@ -64,6 +64,14 @@ def ciklicne_podreci(s):
     """
     Напиши функцију који исписује све подречи које се могу добити читањем слова дате речи кренувши од неког
 слова, у круг, назад до тог слова.
+Улаз    zdravo
+Излаз
+	zdravo
+	dravoz
+	ravozd
+	avozdr
+	vozdra
+	ozdrav
     """
     for i in range(len(s)):
         print(s)
