--- a/вежбе/вежбе11.md
+++ b/вежбе/вежбе11.md
@@ -142,7 +142,7 @@ def insertion_sort(a):
 </details>
 
 ## Задатак 6
-Написати функцију која речуна збир свих чланова матрице.
+Написати функцију која рaчуна збир свих чланова матрице.
 <details markdown='block'>
 <summary>Решење </summary>
 
@@ -156,19 +156,5 @@ def suma_svih_clanova_matrice(matrica):
 ```
 </details>
 
-## Задатак 7
-Написати функцију која рачуна збир свих чланова матрице.
-<details markdown='block'>
-<summary>Решење </summary>
-
-```python
-def suma_svih_clanova_matrice(matrica):
-    suma = 0
-    for i in range(len(matrica)):
-        for j in range(len(matrica[0])):
-            suma += matrica[i][j]
-    return suma
-```
-</details>
 
 
