--- a/вежбе/вежбе14.md
+++ b/вежбе/вежбе14.md
@@ -328,7 +328,7 @@ def search(root, k):
 
 ```python
 def min(root):
-	# idemo desno sve dok mozemo
+	# idemo levo sve dok mozemo
 	current=root
 	while current.left is not None:
 		current=current.left
@@ -362,7 +362,7 @@ def naslednik(root):
 		
 	#case 2: Nema desno dete, moramo da idemo gore sve dok ne krenemo desno(dodjemo do levog deteta)
 	# idemo gore sve dok je on desno dete(njegov roditelj je manji od njega)
-	# ili dok nema roditelja, tada nemamo successor
+	# ili dok nema roditelja, tada nemamo naslednika
 	# i vracamo roditelja, u prvom slucaju, vratice key, u drugom None
 	current=root
 	while current.parent is not None and current is current.parent.right:
@@ -376,10 +376,10 @@ def naslednik(root):
 <summary>Претходник </summary>
 
 ```python
-def претходник(root):
+def prethodnik(root):
 	#case 1: Ima levo dete, trazi se maksimum na njemu
 	if root.left is not None:
-		return root.left.min()
+		return root.left.max()
 		
 	#case 2: Nema levo dete, moramo da idemo gore sve dok ne krenemo levo(dodjemo do desnog deteta)
 	# idemo gore sve dok je on levo dete(njegov roditelj je veci od njega)
@@ -398,7 +398,7 @@ def претходник(root):
 
 ```python
 def insert(root, node):
-	# Isto kao find, samo umesto return stavljamo node
+	# Isto kao search, samo umesto return stavljamo node
 	if root.key == node.key:
 		return root
 	elif k < root.key:
@@ -448,17 +448,17 @@ def delete(root):
 			root.parent.right.parent=root.parent
 		return root
 		
-	#case 3 ima oba deteta, trazimo successor i menjamo keyeve cvoru i successoru i brisemo succesor
+	#case 3 ima oba deteta, trazimo naslednika i menjamo keyeve cvoru i nasledniku i brisemo naslednika
 	else:
-		s=root.successor()
+		s=naslednik(root)
 		s.key,root.key=root.key,s.key
-		return s.delete()
+		return delete(naslednik)
 
 ```
 </details>
 
 <details markdown='block'>
-<summary>Inorder проласaк кроз стабло </summary>
+<summary>Inorder пролазак кроз стабло </summary>
 
 ```python
 def inorder(root,array):
