--- a/колоквијуми/кол22.md
+++ b/колоквијуми/кол22.md
@@ -1,7 +1,7 @@
 # Основи програмирања: колоквијум 2022.
 
+## Задатак A
 
-## Задатак 1
 Малог Карла фасцинирају различите врсте бројева: парни, непарни, лепи, савршени, прости (мама му не да да те користи), троугласти... Размишљајући о свим тим бројевима, одлучио је да осмисли своје. Дуго је размишљао о томе како да их дефинише, док није видео огледало. Тада му је синула изврсна идеја: његови бројеви зваће се зрцални, а број ће бити зрцалан ако се може прочитати у огледалу тако да опет изгледа као неки број.
 
 Тако су на пример бројеви 0 и 8 зрцални, јер у огледалу изгледају исто. Остали једноцифрени бројеви нису зрцални. Број 8088 је такође зрцалан јер у огледалу изгледа као 8808. Број 80 пак није зрцалан, јер у огледалу изгледа као 08, а Карло зна да се бројеви пишу без водећих нула.
@@ -21,7 +21,8 @@ else:
 
 </details>
 
-## Задатак 2
+## Задатак B
+
 Постоје три тајна природна броја, X, Y и Z, за које важи X <= Y <= Z. Како би вас збунили и отежали вам проналазак тајних бројева, дато вам је седам (не нужно различитих) бројева с тврдоњм да су то X, Y, Z, X + Y, Y + Z, Z + X, и X + Y + Z у неком редоследу.
 
 Међутим, постоји начин да се из ових седам датих бројева на јединствен начин одреде X, Y и Z.
@@ -38,7 +39,8 @@ print(x,y,z)
 
 </details>
 
-## Задатак 3
+## Задатак C
+
 За задати број, написати програм који избацује узастопне понављајуће цифре.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -78,7 +80,8 @@ print(ponavljajuceCifre(broj))
 
 </details>
 
-## Задатак 4
+## Задатак D
+
 За задати низ бројева, нови ниво је једнак збиру свака два узастопна члана на претходном нивоу.
 Написати функцију која ће вратити вредност која се добија на нивоу када се више не може рачунати тај збир.
 <details markdown='block'>
@@ -103,7 +106,8 @@ print(trougaonizbir(niz))
 
 </details>
 
-## Задатак 5
+## Задатак E
+
 Да ли сте се икада запитали на колико различитих начина у продавници можете добити кусур у висини одређеног износа користећи новчиће од 1, 2, 5, 10 и 20 динара?
 Написати програм коjи враћа исписује броj начина, а прима износ и апоене у виду природног броjа и низа позитивних броjева.
 <details markdown='block'>
@@ -122,8 +126,6 @@ def kusur(iznos, apoeni):
 	
 	
 print(kusur(iznos,apoeni))
-
-
 
 ```
 
