Додата објашњења задака за јун

--- a/испити/јун23.md
+++ b/испити/јун23.md
@@ -143,46 +143,22 @@ for _ in range(n):
 <summary>Решење </summary>
 
 ```python
-n,k=input().split()
-p1,p2=input().split()
-i1,i2=input().split()
-n=int(n)
-k=int(k)
-p1=(int(p1))
-p2=int(p2)
-i1=(int(i1))
-i2=int(i2)
-l=0
-if i1>p1:
-    if abs(i1-p1)>=abs(p1+n-i1):
-        l=l+abs(p1+(n-i1))
-        
-    else:
-        l=l+abs(i1-p1)
-else:
-    if abs(n-p1+i1)>=abs(p1-i1):
-        l=l+abs(p1-i1)
-        
-    else:
-        l=l+abs(n-p1+i1)
-        
-        
-if p2>i2:
-    if abs(p2-i2)>=abs(k-p2+i2):
-        l=l+abs(k-p2+i2)
-       
-    else:
-        l=l+abs(p2-i2)
-        
-else:
-    if abs(i2-p2)>=abs(p2+(k-i2)):
-        l=l+abs(p2+(k-i2))
-        
-    else:
-        l=l+abs(i2-p2)
-print(l)
+m, n = map(int, input().split())
+a, b = map(int, input().split())
+c, d = map(int, input().split())
+print(min(abs(c-a),m-abs(c-a))+min(abs(d-b),n-abs(d-b)))
 ```
 </details>
+
+
+<details markdown='block'>
+<summary>Текстуално објашњење </summary>
+
+Приметимо да координате можемо да посматрамо независно. Најлакши начин да решимо задатак је анализом случајева. За обе координате разматрамо два случаја, да ли смо прешли преко ивице или не. Посматрајмо $x$ координату почетног и крајњег поља. Уколико нисмо прешли ивицу од поља $A_{x}$ до поља $B_{x}$, растојање је $|A_{x}-B_{x}|$. Уколико јесмо и дужина ворп-спејса је $D_{x}$, растојање је $D_{x}-|A_{x}-B_{x}|$.  Дакле, минималан број корака да би смо се нашли на $x$ координати на којој је крајње поље је $\min(|A_{x}-B_{x}|,D_{x}-|A_{x}-B_{x}|)$. Сличан резултат добијамо за $y$ координату,   $\min(|A_{y}-B_{y}|,D_{y}-|A_{y}-B_{y}|)$. Укупан број корака је $\min(|A_{x}-B_{x}|,D_{x}-|A_{x}-B_{x}|) + \min(|A_{y}-B_{y}|,D_{y}-|A_{y}-B_{y}|)$.
+
+
+</details>
+
 
 ## Задатак E
 
@@ -207,6 +183,24 @@ print(l)
 На стандардни излаз је потребно исписати један број: број начина на које је могуће изабрати емисију и сценарио, тако да рецепт који одговара том сценарију прави јело о ком ће емисија бити.
 
 <details markdown='block'>
+<summary>Kвадратно решење(за 50% поена) </summary>
+
+```python
+n = int(input())
+x = list(map(int, input().split()))
+y = list(map(int, input().split()))
+z = list(map(int, input().split()))
+
+count = 0
+for i in range(n):
+    for j in range(n):
+        if x[i] == y[z[j] - 1]:
+            count += 1
+print(count)
+```
+</details>
+
+<details markdown='block'>
 <summary>Решење </summary>
 
 ```python
@@ -215,16 +209,26 @@ x = list(map(int, input().split()))
 y = list(map(int, input().split()))
 z = list(map(int, input().split()))
 
-res = 0
-cnt = [0] * 100005
+count = {}
+for j in range(n):
+    count[y[z[j]-1]] = count.get(y[z[j]-1], 0) + 1
 
+result = 0
 for i in range(n):
-    cnt[x[i]] += 1
+    result += count.get(x[i], 0)
 
-for i in range(n):
-    res += cnt[y[z[i] - 1]]
+print(result)
 
-print(res)
 ```
 </details>
 
+<details markdown='block'>
+<summary>Текстуално објашњење </summary>
+
+Прва два подзадатка можемо једноставно решити са две угњеждене петље које испробавају сваки пар $(i, j)$ и броје за колико таквих парова је $X_i = Z_{Y_j}$. Временска сложеност овог алгоритма је $\mathcal{O}(N^2)$, што неће бити довољно за преостале подзадатке.
+
+Алгоритам можемо побољшати тако што раздвојимо ове две петље: прво ћемо пребројати колико постоји епизода за свако могуће јело, односно израчунати низ $C$, где је $C_i$ број индекса $j$ где $X_j = i$. Пошто су све вредности $X_i$ највише $N$, овај низ стаје у меморију и можемо га попунити једним пролазом кроз $X$.
+
+Сада је довољно да прођемо кроз $Z$, и за свако $Z_i$ укупном броју додамо $C_{Z_i}$ (број елемената у $X$ који би били одговарајући пар). Временска сложеност је сада $\mathcal{O}(N)$, сасвим довољно за $N \leq 10^5$.
+
+</details>
